# CrashDiag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.vultr.yaml  compose.yaml  pyproject.toml  requirements-train.txt  smoke_test.py
crashdiag/: __init__.py  agents.py  orchestrator.py  sandbox_server.py  verifier.py
crashdiag/faults/: __init__.py  base.py  modules.py
crashdiag/sandbox_apps/: __init__.py  coolify.py  http.py  mock.py
data/: grpo_eval.jsonl  grpo_train.jsonl  sft_eval.jsonl  sft_train.jsonl
deploy/vultr/: Caddyfile
notebooks/: eval.ipynb  grpo.ipynb  grpo_hard.ipynb  sft.ipynb
scripts/: train.sh
tests/: __init__.py  test_agents.py  test_artifacts.py  test_evaluate.py  test_grpo_hard_workflow.py  test_grpo_reward.py  test_hard_scenarios.py  test_hard_training_data.py  test_http_sandbox.py  test_inference.py  test_kaggle.py  test_mock_faults.py  test_notebooks.py  test_orchestrator.py  test_reporting.py  test_training_data.py  test_verifier.py
training/: __init__.py  artifacts.py  calibrate_grpo.py  common.py  evaluate.py  evaluate_jsonl.py  generate_dataset.py  generate_grpo_hard.py  grpo.py  grpo_gates.py  hard_scenarios.py  inference.py  kaggle.py  reporting.py  sft.py
