[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "crashdiag"
version = "0.3.0"
description = "Mechanically verified infrastructure-diagnosis RL environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CrashDiag contributors" }]
dependencies = []

[project.optional-dependencies]
artifacts = [
  "huggingface-hub>=1.5,<2",
  "python-dotenv>=1.0,<2",
]
train = [
  "accelerate>=1.10,<2",
  "datasets>=4,<5",
  "huggingface-hub>=1.5,<2",
  "peft>=0.18,<1",
  "python-dotenv>=1.0,<2",
  "torch>=2.6",
  "transformers>=5.2,<6",
  "trl>=1.8,<2",
]

[project.scripts]
crashdiag-sandbox = "crashdiag.sandbox_server:main"
crashdiag-generate = "training.generate_dataset:main"
crashdiag-generate-grpo-hard = "training.generate_grpo_hard:main"
crashdiag-sft = "training.sft:main"
crashdiag-grpo = "training.grpo:main"
crashdiag-calibrate-grpo = "training.calibrate_grpo:main"
crashdiag-evaluate = "training.evaluate:main"
crashdiag-evaluate-jsonl = "training.evaluate_jsonl:main"
crashdiag-kaggle = "training.kaggle:main"

[tool.setuptools.packages.find]
include = ["crashdiag*", "training*"]
